# -inference-2

./: README.md  architecture.md  model.md  tasks.md  vjepa2.md
secondary-inference-daas/apps/web/: package-lock.json  package.json
secondary-inference-daas/apps/web/src/app/: layout.tsx  page.tsx
secondary-inference-daas/apps/web/src/app/console/: layout.tsx  page.tsx
secondary-inference-daas/apps/web/src/components/: console-header.tsx  console-sidebar.tsx  navbar.tsx
secondary-inference-daas/apps/web/src/contexts/: auth-context.tsx
secondary-inference-daas/apps/web/src/hooks/: use-jobs.ts  use-sources.ts
secondary-inference-daas/apps/workers/: README.md  __init__.py  pyproject.toml
secondary-inference-daas/infra/fly/: Dockerfile  README.md  fly.toml
secondary-inference-daas/infra/grafana/: README.md  docker-compose.yml  prometheus.yml
secondary-inference-daas/infra/grafana/grafana/provisioning/datasources/: datasources.yml
secondary-inference-daas/infra/supabase/: README.md  test_rls.sql
secondary-inference-daas/infra/supabase/supabase/: seed.sql
secondary-inference-daas/infra/supabase/supabase/migrations/: 20250915165553_create_core_tables.sql  20250915170100_enable_rls_core_tables.sql  20250915220958_create_ingest_sources_table.sql  20250915221014_enable_rls_ingest_sources.sql  20250915222514_create_get_user_projects_rpc.sql  20250915223758_create_ingest_jobs_table.sql  20250915223810_enable_rls_ingest_jobs.sql  20250915223819_create_get_user_jobs_rpc.sql  20250915224337_fix_seed_data_for_current_user.sql
secondary-inference-daas/infra/vercel/: README.md  vercel.json
(+13 files in other folders)
