[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secondary-inference-workers"
version = "0.1.0"
description = "Python workers for secondary inference processing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Secondary Inference Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",
    "opencv-python>=4.8.0",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "great-expectations>=0.18.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/your-org/secondary-inference-daas"
Repository = "https://github.com/your-org/secondary-inference-daas"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
